--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,48 @@
                     android:onClick="SetCameraSettings"
                     android:text="Flash" />
 
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray"/>
+
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tvZoom"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        style="@style/tv_for_control"
+                        android:text="10" />
+
+                    <SeekBar
+                        android:id="@+id/seekZoom"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:max="9" />
+
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray"/>
+
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/tv_for_control"
+                    android:text="timer each sec" />
+
+
 
             </LinearLayout>
 
