--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,6 +8,30 @@
     tools:context=".MainActivity">
 
 
+    <LinearLayout
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/editIP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:textColor="#fff"
+            android:textSize="27sp"
+            android:gravity="center"
+            android:inputType="textPersonName"
+            android:text="Name" />
+
+        <Button
+            android:id="@+id/btnStartStop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="start" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/btnChangeSettings1"
         android:layout_width="wrap_content"
@@ -27,43 +51,11 @@
         android:onClick="OnChaneSettingsClick"
         android:text="Bundle settings 2" />
 
-    <Button
-        android:id="@+id/btnStartPref"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:onClick="OnStartPref"
-        android:text="btnStartPref" />
 
 
-    <Button
-        android:id="@+id/btnDisconectSocket"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="59dp"
-        android:onClick="OnDisconectSocket"
-        android:text="Disconect Socket" />
 
-    <Button
-        android:id="@+id/btnMakePhoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="11dp"
-        android:layout_marginBottom="4dp"
-        android:text="shoot and send" />
 
-    <Button
-        android:id="@+id/btnTimer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:text="Start Timer" />
+
 
     <TextView
         android:id="@+id/tvDetails"
@@ -77,5 +69,42 @@
         android:text="tvDetails"
         android:textColor="#fff"
         android:textSize="20sp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"
+        android:orientation="horizontal">
+        <Button
+            android:id="@+id/btnTimer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:text="Start Timer" />
+
+        <Button
+            android:id="@+id/btnDisconectSocket"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="59dp"
+            android:onClick="OnDisconectSocket"
+            android:text="Disconect Socket" />
+
+        <Button
+            android:id="@+id/btnMakePhoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginRight="11dp"
+            android:layout_marginBottom="4dp"
+            android:text="shoot and send" />
+
+    </LinearLayout>
 
 </RelativeLayout>
