--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -52,6 +52,15 @@
         android:text="Bundle settings 2" />
 
 
+    <Button
+        android:id="@+id/btnClick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:onClick="serviceParamsStart"
+        android:text="click" />
+
 
     <TextView
         android:id="@+id/tvDetails"
